AutofillAgent informs PasswordAutofillAgent about filling.

On each change in text field, PasswordAutofillAgent saves provisionally username/password as candidates for saving. If PasswordAutofillAgent is not informed about filling from AutofillAgent it might miss autofill value and propose incorrect value to save. 

Bug: 763909
Change-Id: I7abaca7eb1c3f9686df29f7d2e83f2b88a72401b
Reviewed-on: https://chromium-review.googlesource.com/663361
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501922}
Former-commit-id: a332ebc6a944a16cee8726c18a986cfd61288f11